--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/alien949/TodoList.git",
+  "homepage": "https://alien949.github.io/TodoList",
   "name": "todo-list",
   "private": true,
   "version": "0.0.0",
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "vite": "^5.3.4"
   }
 }
